<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration.ForgotPasswordFragment">


    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textSize="28sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/mailIconForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/mail"
        android:src="@drawable/mail_icon"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordText"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText" />

    <EditText
        android:id="@+id/forgotEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/textbox"
        android:elevation="3dp"
        android:ems="10"
        android:hint="@string/registered_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailIconForgotPassword" />

    <ProgressBar
        android:id="@+id/forgotProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/resetPasswordBtn"
        app:layout_constraintEnd_toEndOf="@+id/forgotEmail"
        app:layout_constraintStart_toStartOf="@+id/forgotEmail"
        app:layout_constraintTop_toBottomOf="@+id/forgotEmail"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn"
        android:stateListAnimator="@null"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forgotEmail"
        app:layout_constraintStart_toStartOf="@+id/forgotEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>