<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Registration.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/mainLogoSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/alt_logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/textLogoSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/text_logo"
            android:contentDescription="@string/alt_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainLogoSignUp" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/textbox"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="14dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogoSignUp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/phoneSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/textbox"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="14dp"
            android:textColorHint="#757575"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="@+id/emailSignUp"
            app:layout_constraintStart_toStartOf="@+id/emailSignUp"
            app:layout_constraintTop_toBottomOf="@+id/emailSignUp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/textbox"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/phoneSignUp"
            app:layout_constraintStart_toStartOf="@+id/phoneSignUp"
            app:layout_constraintTop_toBottomOf="@+id/phoneSignUp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/confirmPasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            android:background="@drawable/textbox"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/confirm_Password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@id/passwordSignUp"
            app:layout_constraintStart_toStartOf="@id/passwordSignUp"
            app:layout_constraintTop_toBottomOf="@id/passwordSignUp"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordSignUp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/btn"
            android:stateListAnimator="@null"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signInLink"
            app:layout_constraintEnd_toEndOf="@+id/phoneSignUp"
            app:layout_constraintStart_toStartOf="@+id/phoneSignUp" />

        <TextView
            android:id="@+id/signInLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>