<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
     android:background="@color/colorPrimary"
    tools:context=".Registration.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/mainLogoSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/alt_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/textLogoSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/text_logo"
            android:contentDescription="@string/alt_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainLogoSignIn" />

        <EditText
            android:id="@+id/emailSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:importantForAutofill="no"
            android:background="@drawable/textbox"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/email_or_phone"
            android:inputType="text"
            android:padding="14dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogoSignIn" />

        <EditText
            android:id="@+id/passwordSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints="password"
            android:background="@drawable/textbox"
            android:elevation="3dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/emailSignIn"
            app:layout_constraintStart_toStartOf="@+id/emailSignIn"
            app:layout_constraintTop_toBottomOf="@+id/emailSignIn" />

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/forgot_password"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/passwordSignIn"
            app:layout_constraintTop_toBottomOf="@+id/passwordSignIn" />

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLink" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/btn"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signUpLink"
            app:layout_constraintEnd_toEndOf="@+id/passwordSignIn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordSignIn"
            app:layout_constraintTop_toBottomOf="@+id/progressBarSignIn"
            app:layout_constraintVertical_bias="0.594" />

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/new_user_create_account"
            android:textColor="@color/black"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>